# reactive_grasp

./: CMakeLists.txt  README.md  package.xml
MATLAB script/: Copy_of_analysis.m  analysis.m  analysis.m~  exp.txt  tofile.m
MATLAB script/prove simulink/: untitled.slx
config/: comparison_dataset.yaml  parameters.yaml
include/: IMUboardAPI.h  reactiveGraspDetection.h
launch/: display.launch
logs/MATLAB script/: Copy_of_analysis.m  analysis.m  analysis.m~  filt.m  other.m  select_imu.m
src/: IMUboardAPI.cpp  main.cpp  reactiveGraspDetection.cpp
